--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^16.0.2",
     "@angular/platform-browser-dynamic": "^16.0.2",
     "@angular/router": "^16.0.2",
+    "angular-cli-ghpages": "^1.0.6",
     "bootstrap": "^5.3.0-alpha3",
     "jquery": "^3.7.0",
     "magnific-popup": "^1.1.0",
