--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1, 
   "newProjectRoot": "projects",
   "projects": {
-    "kiaz-ng": {
+    "vgfence": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/kiaz-ng",
+            "outputPath": "dist/vgfence",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -87,18 +87,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "kiaz-ng:build"
+            "browserTarget": "vgfence:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "kiaz-ng:build:production"
+              "browserTarget": "vgfence:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "kiaz-ng:build"
+            "browserTarget": "vgfence:build"
           }
         },
         "test": {
@@ -122,11 +122,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "kiaz-ng:serve"
+            "devServerTarget": "vgfence:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "kiaz-ng:serve:production"
+              "devServerTarget": "vgfence:serve:production"
             }
           }
         }
